fixed layout bug

--- a/app/styles/areas/_generator.scss
+++ b/app/styles/areas/_generator.scss
@@ -32,7 +32,7 @@
     margin-top: 6px;
     height: 50px;
     text-align: center;
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: break-word;
     &--long-pass {
       font-size: .75em;
